--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,21 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.products-container {
+  display: flex;
+  flex-direction: row;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.product {
+  width: 33.33%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.product p {
+  margin: 0;
+}
